wip/authn/req-authn-jwks.yaml
apiVersion: security.istio.io/v1beta1
kind: "RequestAuthentication"
metadata:
  name: jwt-req
spec:
  selector:
    matchLabels:
      app: sentences
      mode: sentence
  jwtRules:
  - issuer: "https://github.com/MichaelVL/istio-katas"
    jwksUri: https://raw.githubusercontent.com/MichaelVL/istio-katas/main/jwt/jwks.json
