wip/authn/authz-policy-claims.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwt-req
spec:
  selector:
    matchLabels:
      app: sentences
      mode: sentence
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["https://github.com/MichaelVL/istio-katas/*"]
    when:
    - key: request.auth.claims[groups]
      values: ["admin"]
